--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -4,42 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aula 2\n",
-    "- Obter um gráfico ordenado para as cinco primeiras drogas\n",
-    "- Melhorar a aparência dos gráficos\n",
-    "- Plotar os histogramas com o seaborn\n",
-    "- Estudar sobre as estatíticas retornadas no .describe()\n",
-    "- Refletir sobre a manipulação do tamanho das visualizações\n",
-    "- Fazer outras análises com o boxplot e até com o histograma\n",
-    "- Resumo do que você aprendeu com os dados\n",
-    "\n",
-    "### Aula 3\n",
-    "- Criar tabelas de frequências com pandas.groupby().\n",
-    "- Normalizar o crosstab pela coluna\n",
-    "- Explorar outros agregadores\n",
-    "- Explorar o mealt\n",
-    "- Calcular e analisar a correlação entre os g's e os c's. Refletir sobre os efeitos biológicos.\n",
-    "- Estudar o código que plota a matriz de correlação (heatmap)\n",
-    "- Fazer outras análises com o boxplot e até com o histograma\n",
-    "- Resumo do que você aprendeu com os dados\n",
-    "\n",
-    "### Aula 4\n",
-    "- Encontrar o top 10 das ações do MDA (inibidor, antagonista...)\n",
-    "- Criar a coluna eh_controle para quando na linha tratamento == com_controle\n",
-    "- Criar três colunas para indicar o tempo 24, 48, 72\n",
-    "- Estudar sobre combinações da dataframe\n",
-    "- Fazer uma análise mais detalhada considerando tempo e dose, para comparar as distribuições (escolher uma droga e comparar com controle)\n",
-    "- Descobiri se tempo tempo algum composto dependendo da configuração do experimento, ativa ou não ativa algum MOA (ou um MOA diferente)\n",
-    "- Descobiri se tempo tempo algum composto dependendo da configuração do experimento ativa MOAs diferentes\n",
-    "- Resumo do que você aprendeu com os dados\n",
-    "\n",
-    "### Aula 5\n",
-    "- Tente outros modelos ou mude os parâmetros dos modelos que testamos em aula\n",
-    "- Estude a documentação sklearn\n",
-    "- Pesquisar o fluxograma \"escolhendo o melhor modelo\"\n",
-    "- Teste outras perguntas de classificação\n",
-    "- Escolha a droga mais utilizada e tente criar um modelo para prever está label.\n",
-    "- Resumo do que você aprendeu com os dados\n"
+    "Esse projeto proposto na semana da imersão promovida pela Aluara, no qual, foi inspirado em um desafio do Laboratory innovation science at Harvard disponibilizando os dados em uma competição no kaggle, cujas referências estão no final do projeto."
    ]
   },
   {
@@ -440,14 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Desafio 01: Investigar por que a classe tratamento é tão desbalanceada?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Dependendo o tipo de pesquisa é possível usar o mesmo controle para mais de um caso. Repare que o grupo de controle é um grupo onde não estamos aplicando o efeito de uma determinada droga. Então, esse mesmo grupo pode ser utilizado como controle para cada uma das drogas estudadas.\n",
+    "Dependendo do tipo de pesquisa é possível usar o mesmo controle para mais de um caso. Repare que o grupo de controle é um grupo onde não estamos aplicando o efeito de uma determinada droga. Então, esse mesmo grupo pode ser utilizado como controle para cada uma das drogas estudadas.\n",
     "\n",
     "Um ponto relevante da base de dados que estamos trabalhando é que todos os dados de controle estão relacionados ao estudo de apenas uma droga."
    ]
@@ -890,13 +848,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Desafio 03: Proporção da classe tratamento "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -1200,13 +1151,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Desafio 02: Plotar as cinco últimas linhas da tabela"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -1417,13 +1361,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Desafio 04: Quantos tipos de drogas foram investigados"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
@@ -1460,13 +1397,6 @@
     "# quantos tipos de drogas foram investigadas\n",
     "display(dados[\"droga\"].value_counts()) # aqui agrupamos as drogas com suas respectivas quantidades\n",
     "print(f'Quantidades de drogas: {len(dados[\"droga\"].value_counts())}') # aqui contamos o tamanho da série, então a quantidades de drogas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Desafio 05: Formatar os gráficos: títulos, legendas e etc"
    ]
   },
   {
@@ -1916,13 +1846,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Desafio 6: Procurar na documentação o método query "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -2293,13 +2216,6 @@
     "# criamos uma cópia para caso dê algum problema não altere nossa base de dados\n",
     "dados_copia = dados.copy()\n",
     "display(dados_copia)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Desafio 7: Renomear as colunas com hífen"
    ]
   },
   {
@@ -3049,33 +2965,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Desafio 8: Resumo do que você aprendeu com os dados "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Aula 02"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Desafio 01: Obter um gráfico ordenado para as cinco primeiras drogas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Desafio 02: Melhorar a aparência dos gráficos"
    ]
   },
   {
@@ -3155,13 +3045,6 @@
    "source": [
     "# valor máximo\n",
     "dados[\"g-0\"].max()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Desafio 03: Plotar os histogramas com o seaborn"
    ]
   },
   {
@@ -8023,6 +7906,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Aula 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Trabalhando com os dados resultados"
    ]
   },
@@ -9529,6 +9419,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Aula 5"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -9565,6 +9462,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O número acima indica que aproximadamente, nosso modelo tem 63% de acertar se os mecânimos foi ativado ou não."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -9592,6 +9496,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparando com um modelo no qual a premissa é que todos os mecânismos foram ativados, assim, tendo um valor um pouco menor que 63%, sendo aproximadamente 61% indica que o nosso modelo logistico não está tão bom para análises mais rigorosas, e assim, validar esse modelo e colocar em prática."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -9614,6 +9525,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A célula acima indica o porque dos 61% serem ativos com o modelo \"chutando\" todos os mecânimos ativos, pois, a maioria do mecânismos foram ativados \"0.60666\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
@@ -9630,6 +9548,7 @@
     }
    ],
    "source": [
+    "# tentando melhorando um pouco nosso modelo, agora utilizando o DecisionTreeClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "x = dados_combinados.select_dtypes(\"float64\")\n",
     "y = dados_combinados[\"ativo_moas\"]\n",
@@ -9638,6 +9557,13 @@
     "modelo_arvore = DecisionTreeClassifier(max_depth=3)\n",
     "modelo_arvore.fit(x_treino, y_treino)\n",
     "modelo_arvore.score(x_teste, y_teste)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aqui obtivémos uma precisão de acerto um pouco menor do que o modelo logístico."
    ]
   },
   {
@@ -9669,9 +9595,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Essa árvore de decisão apresenta inicialmente o nó raiz (gene \"g-385\") que é uma variável, a partir desta divide a  árvore em duas com  o objetivo de deixar o mais homogêno possível, por exemplo, de um lado uma maior probabilidade de experimentos que não foram ativos e de outro lado experimentos que foram ativados.\n",
+    "Essa árvore de decisão apresenta inicialmente o nó raiz (gene \"g-385\") que é uma variável, a partir desta divide a  árvore em duas com  o objetivo de deixar o mais homogêno possível, por exemplo, de um lado uma maior probabilidade de experimentos que não foram ativos e de outro lado experimentos que foram ativados. \n",
     "\n",
-    "### Obs: \n",
+    "Obs: \n",
     "    - gini: representa o quão homogêneo é esse conjunto de dados.\n",
     "    - sample: o número de amostra.\n",
     "    - class: é a decisão da nossa amostras \"Ativado\" ou \"Não Ativado\"."
@@ -9712,6 +9638,7 @@
     }
    ],
    "source": [
+    "# valores testes\n",
     "print(teste)"
    ]
   },
@@ -9729,6 +9656,7 @@
     }
    ],
    "source": [
+    "# valores treino\n",
     "print(treino)"
    ]
   },
@@ -10541,6 +10469,7 @@
     }
    ],
    "source": [
+    "# tentando melhora nossa precisão de acerto com o RandomForestClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "x = dados_combinados.drop([\"id\", \"n_moas\", \"ativo_moas\", \"droga\"], axis=1) # generalizando o estudo (vazamento de dados)\n",
     "x = pd.get_dummies(x, columns=[\"tratamento\", \"dose\", \"tempo\"])\n",
@@ -10553,11 +10482,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Pela célula acima, percebe-se que este modelo é melhor do que o modelo logístico, assim, tendo uma precisão de acerto de aproximadamente 68%."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Foi analisado uma base dados na qual faz referência ao tema da \"saúde\"; como uma determinada cultura de células se desenvolve ao aplicar determinados compostos nas mesmas, sendo estes com controle ou não. Como determinados genes influenciariam nesse desenvolvimento ao longo do tempo no qual utilizamos as correlações entre eles e fizemos também algumas correlações entre genes e células. Fizemos algumas pré análises, assim, observando as frequência de determinados genes ao longo do tempo, com relação aos períodos de tempo, se o tratamento foi com droga ou com controle e etc. Por fim, proposmos alguns modelos de aprendizado de máquina com o intuito de prever resultados que não está no nosso banco de dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Agradecimentos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Queria agradecer a Alura por todo o suporte, pelos vídeos muito bem explicativos e pela indicação de como resolver alguns desafios. Queria agradecer também a todos os colegas que tiveram comigo nessa imersão."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Referências"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://lish.harvard.edu/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.kaggle.com/c/lish-moa"
+   ]
   }
  ],
  "metadata": {
