--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esse projeto proposto na semana da imersão promovida pela Aluara, no qual, foi inspirado em um desafio do Laboratory innovation science at Harvard disponibilizando os dados em uma competição no kaggle, cujas referências estão no final do projeto."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Aula 01"
    ]
   },
@@ -10499,7 +10492,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Foi analisado uma base dados na qual faz referência ao tema da \"saúde\"; como uma determinada cultura de células se desenvolve ao aplicar determinados compostos nas mesmas, sendo estes com controle ou não. Como determinados genes influenciariam nesse desenvolvimento ao longo do tempo no qual utilizamos as correlações entre eles e fizemos também algumas correlações entre genes e células. Fizemos algumas pré análises, assim, observando as frequência de determinados genes ao longo do tempo, com relação aos períodos de tempo, se o tratamento foi com droga ou com controle e etc. Por fim, proposmos alguns modelos de aprendizado de máquina com o intuito de prever resultados que não está no nosso banco de dados"
+    "Foi analisado uma base dados na qual faz referência ao tema da \"saúde\"; como determinadas culturas de células se desenvolve ao aplicar determinados compostos nas mesmas, sendo estes com controle ou não. Como determinados genes influenciariam nesse desenvolvimento ao longo do tempo no qual utilizamos as correlações entre eles e fizemos também algumas correlações entre genes e células. Fizemos algumas pré análises, assim, observando as frequência de determinados genes ao longo do tempo, com relação aos períodos de tempo, se o tratamento foi com droga ou com controle e etc. Por fim, proposmos alguns modelos de aprendizado de máquina com o intuito de prever resultados que não está no nosso banco de dados"
    ]
   },
   {
