--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -10520,6 +10520,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Esse projeto proposto na semana da imersão promovida pela Alura, no qual, foi inspirado em um desafio do Laboratory innovation science at Harvard disponibilizando os dados em uma competição no kaggle, cujas referências estão no final do projeto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "https://lish.harvard.edu/"
    ]
   },
